deployment/demo-applications/kustomize/demo-applications/overlays/local/demo-applications/issuer/ingress.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issuer
  labels:
    app: issuer
spec:
  tls:
  - hosts:
      - $(ISSUER_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(ISSUER_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: issuer
            port:
              name: http
